force-app/main/default/objects/Incentive_Slab__c/fields/Achievement_From__c.field-meta.xml
<CustomField>
    <fullName>Achievement_From__c</fullName>
    <label>Achievement From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>