force-app/main/default/objects/Incentive_Slab__c/fields/Achievement_To__c.field-meta.xml
<CustomField>
    <fullName>Achievement_To__c</fullName>
    <label>Achievement To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>