force-app/main/default/objects/Incentive_Slab__c/fields/Incentive_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Percentage__c</fullName>
    <label>Incentive Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>