force-app/main/default/objects/Incentive_Slab__c/fields/Target_Plan__c.field-meta.xml
<CustomField>
    <fullName>Target_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Plan</label>
    <referenceTo>Target_Plan__c</referenceTo>
    <relationshipLabel>Incentive Slabs</relationshipLabel>
    <relationshipName>Incentive_Slabs</relationshipName>
    <type>Lookup</type>
</CustomField>